h1--small class for a smaller h1, no mb on h4, fixed l/r margin on single column layout, fix image alignment on Visita in Cantina

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -92,6 +92,14 @@ h1 {
   @include breakpoint-max() {
     @include m-size(h1);
   }
+
+  &.h1--small {
+    @include font(h1sm, $fm: primary);
+
+    @include breakpoint-max() {
+      @include m-size(h1);
+    }
+  }
 }
 
 h2 {
