--- a/sass/config/_typography.scss
+++ b/sass/config/_typography.scss
@@ -146,7 +146,7 @@ $decorations: (
       fs: 1em,
       lh: 1.5em,
       mt: 1.5em,
-      mb: 0.75em,
+      mb: 0,
     ),
 
     h5: (
